--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ input{
     font-size: clamp(1rem,2.5vw,3rem);
     font-weight: bold;
     margin: 20px 10px ;
+    display: none;
     
 }
 .guide{
